# hw3-sofialen0408

./: .gitignore  Makefile  README.md  ai_documentation.txt  environment.yml  myst.yml  pyproject.toml
data/: GW150914_data.csv
ligotools/: __init__.py  utils.py
ligotools/tests/: test_readligo.py  test_utils.py
